<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageIv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:strokeWidth="2dp"
                android:src="@drawable/ic_baseline_crop_original_24"
                android:adjustViewBounds="true"/>

            <TextView
                style = "@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/extracted_phone_number_title"/>

            <EditText
                android:id="@+id/extractedPhoneNum"
                style = "@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_add_a_photo_24"
            android:text="@string/take_photo"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/extractPhoneNumBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/extract_phone_number"
            app:icon="@drawable/ic_baseline_offline_share_24"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>